--- a/track.html
+++ b/track.html
@@ -43,7 +43,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Sathmahal prasadaya.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Sathmahal prasadaya.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -63,7 +63,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Hatadageya.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Hatadageya.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -82,7 +82,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/atadage.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/atadage.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -100,7 +100,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/kiriwehera.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/kiriwehera.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -118,7 +118,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/lankathilaka viharaya.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/lankathilaka viharaya.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -136,7 +136,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/watadageya.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/watadageya.glb"
         scale="20 20 20"
         position="50 150 0"
       >
@@ -154,7 +154,7 @@
       smoothhretshold="5"
     >
       <a-entity
-        gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Thubaramaya.glb"
+        glb-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/praveenthcruz/webapp.io/master/model/Thubaramaya.glb"
         scale="20 20 20"
         position="50 150 0"
       >
